package com.directi.training.isp.exercise_refactored;

public interface CallbackHandler {
    void timeOutCallback();

    void proximityCallback();
}