package com.directi.training.isp.exercise_refactored;

public interface Openable {
    void open();

    void close();
}